# Relax

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  package.json  pyproject.toml  requirements.txt  setup.py  versioneer.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml
.gitlab/: CODEOWNERS
.opencode/agents/: algorithm-expert.md  fsdp-expert.md  launcher-expert.md  megatron-expert.md  ray-expert.md
.opencode/commands/: commit.md
.pre-commit-hooks/: check_conflict_markers.py  copyright.py  format_ascii_boxes.py
configs/: env.yaml
docker/: Dockerfile  README.md
docs/: .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  GET_STARTED.md  QUICK_REFERENCE.md  README.md  deploy-docs.sh  fix-chunk-names.js  index.md  start-docs.sh
docs/.vitepress/: config.mts  tsconfig.json
docs/draft/: apprise_notification.md  autoscaler_k8s_keda.md  dataset_design.md  design.md  distributed_checkpoint_service.md  elastic_rollout.md  fully_async.md  generative_reward_model.md  health_check_manager.md  how_to_contribute.md  metrics_service_usage.md  on-policy-distillation.md  restructure-proposal.md
docs/en/: index.md
docs/zh/: index.md
examples/: __init__.py
examples/deepeyes/: README.md  __init__.py  base_env.py  deepeyes_config.yaml  env_deepeyes.py  qwen_vl.py  reward_deepeyes.py  rollout.py  (+6 more)
relax/: _version.py
tests/: test_agentic_rollout.py
(+363 files in other folders)
